deploy/deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-api
  labels:
    app: deployment-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deployment-api
  template:
    metadata:
      labels:
        app: deployment-api
    spec:
      containers:
      - name: deployment-api
        image: fiaptechchallenge03acr.azurecr.io/tech-challenge-03
        imagePullPolicy: Always
        resources:
          limits:
            cpu: "500m" 
            memory: "256Mi"
          requests:
            cpu: "250m"  
            memory: "128Mi"
