deploy/svc-deployment-api.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: deployment-api
  name: svc-api
spec:
  selector: 
    app: deployment-api
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3333
